Fix[overflow: hidden, position: fixed]: Fix overflow: hidden when card opens is now back on auto when exiting the overlay. Position of .wrapper-abs-img is now fixed so it stays on the screen no matter where you are on the page

--- a/styles/style.css
+++ b/styles/style.css
@@ -70,15 +70,15 @@ body {
 }
 
 .wrapper-abs-img {
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     right: 0;
     bottom: 0;
-    background-color: rgba(0, 0, 0, 0.8);
-    z-index: 2;
     justify-content: center;
     align-items: center;
+    background-color: rgba(0, 0, 0, 0.8);
+    z-index: 2;
 }
 
 .img-box img {
